--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,5 +23,7 @@
 	<string name="add">Add Bus Stop</string>
 	<string name="add_already_present">This bus stop has already been added</string>
 	<string name="add_button_pressed">Please wait...</string>
+	<string name="busstoplist_selectstop">Choose a bus stop</string>
+	<string name="busstoplist_add">Add bus stop</string>
 	
 </resources>
